<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center_horizontal"
	android:orientation="vertical"
	android:weightSum="2415">
	<View
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_weight="735"/>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="260"
		android:gravity="center_horizontal"
		android:weightSum="100">
		<com.gcscout.trackerdemo.controls.ScalableImageView
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="90"
			android:src="@drawable/app_about_logo"/>
	</LinearLayout>
	<View
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_weight="300"/>
	<com.gcscout.trackerdemo.controls.ScalableTextView
		android:layout_width="wrap_content"
		android:layout_height="0dp"
		android:layout_weight="85"
		android:autoLink="phone"
		android:text="@string/about_number1"
		android:textColorLink="@color/app_text"/>
	<View
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_weight="50"/>
	<com.gcscout.trackerdemo.controls.ScalableTextView
		android:layout_width="wrap_content"
		android:layout_height="0dp"
		android:layout_weight="85"
		android:autoLink="phone"
		android:text="@string/about_number2"
		android:textColorLink="@color/app_text"/>
	<View
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_weight="290"/>
	<com.gcscout.trackerdemo.controls.ScalableTextView
		android:layout_width="wrap_content"
		android:layout_height="0dp"
		android:layout_weight="75"
		android:text="@string/about_url_link"
		android:autoLink="web"
		android:textColorLink="@color/about_url_link_text"/>
</LinearLayout>