<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:weightSum="760"
	android:background="@color/green_bg">
	<View
	    
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_weight="105"/>
	<com.gcscout.trackerdemo.controls.ScalableImageView
		android:layout_width="wrap_content"
		android:layout_height="0dp"
		android:layout_weight="82"
		android:layout_gravity="center_horizontal"
		android:src="@drawable/app_main_logo"/>
	<View
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_weight="50"/>
	<com.gcscout.trackerdemo.controls.ScalableTextView
		android:id="@+id/tracker_tracking_tooltip"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="72"
		android:layout_marginLeft="@dimen/trackerFragmentMargin"
		android:layout_marginRight="@dimen/trackerFragmentMargin"
		android:textColor="@color/app_text"
		app:textSizePercent="0.5"
		android:gravity="center"/>
	<com.gcscout.trackerdemo.controls.ScalableTextView
		android:id="@+id/tracker_tracking_btn"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="72"
		android:layout_marginLeft="@dimen/trackerFragmentMargin"
		android:layout_marginRight="@dimen/trackerFragmentMargin"
		android:gravity="center"
		app:textSizePercent="0.4"
		android:textColor="@color/green_bg"/>
	<View
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_weight="38"/>
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="0dp"
		android:layout_weight="20"
		android:layout_marginLeft="@dimen/trackerFragmentMargin"
		android:gravity="center_vertical">
		<com.gcscout.trackerdemo.controls.ScalableImageView
			android:id="@+id/tracker_gps_status"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			app:imageHeightSizePercent="0.7"/>
		<com.gcscout.trackerdemo.controls.ScalableTextView
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:layout_marginLeft="@dimen/textMargin"
			android:text="@string/tracker_gps_status_label"
			android:textColor="@color/app_text"/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="0dp"
		android:layout_weight="20"
		android:layout_marginLeft="@dimen/trackerFragmentMargin"
		android:gravity="center_vertical">
		<com.gcscout.trackerdemo.controls.ScalableImageView
			android:id="@+id/tracker_internet_status"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			app:imageHeightSizePercent="0.7"/>
		<com.gcscout.trackerdemo.controls.ScalableTextView
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:layout_marginLeft="@dimen/textMargin"
			android:text="@string/tracker_network_status_label"
			android:textColor="@color/app_text"/>
	</LinearLayout>
	<View
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_weight="44"/>
	<com.gcscout.trackerdemo.controls.ScalableTextView
		android:id="@+id/tracker_last_location_coordinates_label"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="30"
		android:gravity="center"
		app:textSizePercent="0.7"
		android:text="@string/tracker_last_location_coordinates_label"
		android:textColor="@color/tracker_last_location_coordinates_label_text"
		android:background="@color/tracker_last_location_coordinates_label_bg"/>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="75"
		android:gravity="center"
		android:background="@color/app_bg"
		android:weightSum="480">
		<com.gcscout.trackerdemo.controls.ScalableImageView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="135"
			app:imageHeightSizePercent="0.45"
			android:src="@drawable/time_icon"/>
		<com.gcscout.trackerdemo.controls.ScalableTextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="135"
			app:textSizePercent="0.35"
			android:text="@string/tracker_last_location_time_label"
			android:textColor="@color/app_text"/>
		<com.gcscout.trackerdemo.controls.ScalableTextView
			android:id="@+id/tracker_lastlocation_datetime"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="210"
			app:textSizePercent="0.35"
			android:textColor="@color/tracker_last_location_coordinates_label_text"/>
	</LinearLayout>
	<View
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="4"
		android:background="@color/tracker_last_location_coordinates_divider_bg"/>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="75"
		android:gravity="center"
		android:background="@color/app_bg"
		android:weightSum="480">
		<com.gcscout.trackerdemo.controls.ScalableImageView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="135"
			app:imageHeightSizePercent="0.45"
			android:src="@drawable/coordinates_icon"/>
		<com.gcscout.trackerdemo.controls.ScalableTextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="135"
			app:textSizePercent="0.35"
			android:text="@string/tracker_last_location_latitude_label"
			android:textColor="@color/app_text"/>
		<com.gcscout.trackerdemo.controls.ScalableTextView
			android:id="@+id/tracker_lastlocation_latitude"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="210"
			app:textSizePercent="0.35"
			android:textColor="@color/tracker_last_location_coordinates_label_text"/>
	</LinearLayout>
	<View
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="4"
		android:background="@color/tracker_last_location_coordinates_divider_bg"/>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="75"
		android:gravity="center"
		android:background="@color/app_bg"
		android:weightSum="480">
		<com.gcscout.trackerdemo.controls.ScalableImageView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="135"
			app:imageHeightSizePercent="0.45"
			android:src="@drawable/coordinates_icon"/>
		<com.gcscout.trackerdemo.controls.ScalableTextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="135"
			app:textSizePercent="0.35"
			android:text="@string/tracker_last_location_longitude_label"
			android:textColor="@color/app_text"/>
		<com.gcscout.trackerdemo.controls.ScalableTextView
			android:id="@+id/tracker_lastlocation_longitude"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="210"
			app:textSizePercent="0.35"
			android:textColor="@color/tracker_last_location_coordinates_label_text"/>
	</LinearLayout>
	<LinearLayout
		android:id="@+id/tracker_bottom_logo"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="68"
		android:gravity="center"
		android:orientation="vertical"
		android:weightSum="68"
		android:background="@drawable/tracker_bottom_logo_selector">
		<com.gcscout.trackerdemo.controls.ScalableImageView
			android:layout_width="wrap_content"
			android:layout_height="0dp"
			android:layout_weight="30"
			android:src="@drawable/app_logo"/>
	</LinearLayout>
</LinearLayout>