<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<FrameLayout
		android:id="@+id/fragment_container"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:animateLayoutChanges="true"
		android:visibility="gone"/>
	<LinearLayout
		android:id="@+id/home_tab_panel"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:animateLayoutChanges="true"
		android:orientation="vertical"
		android:weightSum="760"
		android:visibility="invisible">
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="64"
			android:baselineAligned="false">
			<LinearLayout
				android:id="@+id/home_tracker_tab"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:gravity="center"
				android:background="@drawable/home_tracker_tab_selector">
				<com.gcscout.trackerdemo.controls.ScalableImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					app:imageHeightSizePercent="0.72"
					android:src="@drawable/tracker_tab_icon_selector"/>
				<com.gcscout.trackerdemo.controls.ScalableTextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					app:textSizePercent="0.5"
					android:layout_marginLeft="@dimen/textMargin"
					android:text="@string/home_label"
					android:textColor="@color/tab_text_selector"/>
			</LinearLayout>
			<LinearLayout
				android:id="@+id/home_settings_tab"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:gravity="center"
				android:background="@drawable/home_settings_tab_selector">
				<com.gcscout.trackerdemo.controls.ScalableImageView
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					app:imageHeightSizePercent="0.72"
					android:src="@drawable/settings_tab_icon_selector"/>
				<com.gcscout.trackerdemo.controls.ScalableTextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					app:textSizePercent="0.5"
					android:layout_marginLeft="@dimen/textMargin"
					android:text="@string/settings_label"
					android:textColor="@color/tab_text_selector"/>
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>
	<LinearLayout
		android:id="@+id/home_progress"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:gravity="bottom|center_horizontal"
		android:orientation="vertical"
		android:weightSum="2415">
		<com.gcscout.trackerdemo.controls.ScalableImageView
			android:layout_width="wrap_content"
			android:layout_height="0dp"
			android:layout_weight="300"
			android:src="@drawable/app_main_logo"/>
		<View
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_weight="1090"/>
		<com.gcscout.trackerdemo.controls.ScalableTextView
			android:layout_width="wrap_content"
			android:layout_height="0dp"
			android:layout_weight="60"
			android:text="@string/home_copyright"
			android:textColor="@color/app_text"/>
		<View
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_weight="100"/>
	</LinearLayout>
</FrameLayout>