<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:weightSum="760">
	<View
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="57"
		android:background="@color/settings_bg"
		android:focusable="true"
		android:focusableInTouchMode="true"/>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="64"
		android:gravity="center_vertical"
		style="@style/SettingsItem">
		<com.gcscout.trackerdemo.controls.ScalableTextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			app:textSizePercent="0.4"
			android:text="@string/settings_device_id_label"
			style="@style/SettingsLabel"/>
		<com.gcscout.trackerdemo.controls.ScalableEditText
			android:id="@+id/settings_device_id"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			app:textSizePercent="0.4"
			android:focusable="false"
			style="@style/SettingsEditText"/>
	</LinearLayout>
	<View
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="3"
		android:background="@color/settings_bg"/>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="64"
		android:gravity="center_vertical"
		style="@style/SettingsItem">
		<com.gcscout.trackerdemo.controls.ScalableTextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			app:textSizePercent="0.4"
			android:text="@string/settings_scout_rx_server_address_label"
			style="@style/SettingsLabel"/>
		<com.gcscout.trackerdemo.controls.ScalableEditText
			android:id="@+id/settings_scout_rx_server_address"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			app:textSizePercent="0.4"
			style="@style/SettingsEditText"/>
	</LinearLayout>
	<View
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="3"
		android:background="@color/settings_bg"/>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="64"
		android:gravity="center_vertical"
		style="@style/SettingsItem">
		<com.gcscout.trackerdemo.controls.ScalableTextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			app:textSizePercent="0.4"
			android:text="@string/settings_scout_rx_server_port_label"
			style="@style/SettingsLabel"/>
		<com.gcscout.trackerdemo.controls.ScalableEditText
			android:id="@+id/settings_scout_rx_server_port"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			app:textSizePercent="0.4"
			style="@style/SettingsEditText"/>
	</LinearLayout>
	<View
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="3"
		android:background="@color/settings_bg"/>
	<View
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="3"
		android:background="@color/settings_bg"/>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="64"
		android:gravity="center_vertical"
		style="@style/SettingsItem">
		<com.gcscout.trackerdemo.controls.ScalableTextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			app:textSizePercent="0.4"
			android:text="@string/settings_journal_size_label"
			style="@style/SettingsLabel"/>
		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:orientation="vertical">
			<com.gcscout.trackerdemo.controls.SimpleSeekBar
				android:id="@+id/settings_journal_size"
				android:layout_width="match_parent"
				android:layout_height="15dp"/>
			<FrameLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">
				<com.gcscout.trackerdemo.controls.ScalableTextView
					android:id="@+id/settings_journal_min_size"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="left"
					app:textSizePercent="0.4"
					style="@style/SettingsSeekBarLabel"/>
				<com.gcscout.trackerdemo.controls.ScalableTextView
					android:id="@+id/settings_journal_size_label"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					app:textSizePercent="0.35"
					style="@style/SettingsSeekBarLabel"/>
				<com.gcscout.trackerdemo.controls.ScalableTextView
					android:id="@+id/settings_journal_max_size"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="right"
					app:textSizePercent="0.4"
					style="@style/SettingsSeekBarLabel"/>
			</FrameLayout>
		</LinearLayout>
	</LinearLayout>
	<View
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="3"
		android:background="@color/settings_bg"/>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="64"
		android:gravity="center_vertical"
		style="@style/SettingsItem">
		<com.gcscout.trackerdemo.controls.ScalableTextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			app:textSizePercent="0.4"
			android:text="@string/settings_packets_send_mode_label"
			style="@style/SettingsLabel"/>
		<FrameLayout
			android:id="@+id/settings_packets_send_mode"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:background="@drawable/settings_switcher_selector">
			<com.gcscout.trackerdemo.controls.ScalableTextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="left|center_vertical"
				app:textSizePercent="0.3"
				android:text="@string/settings_packets_send_mode_by_threshold"
				style="@style/SettingsOption"/>
			<com.gcscout.trackerdemo.controls.ScalableTextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="right|center_vertical"
				app:textSizePercent="0.3"
				android:text="@string/settings_packets_send_mode_by_interval"
				style="@style/SettingsOption"/>
		</FrameLayout>
	</LinearLayout>
	<View
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="3"
		android:background="@color/settings_bg"/>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="64"
		android:animateLayoutChanges="true"
		android:gravity="center_vertical"
		style="@style/SettingsItem">
		<com.gcscout.trackerdemo.controls.ScalableTextView
			android:id="@+id/settings_packets_send_mode_value_label"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			app:textSizePercent="0.4"
			style="@style/SettingsLabel"/>
		<LinearLayout
			android:id="@+id/settings_packets_send_interval_layout"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:orientation="vertical">
			<com.gcscout.trackerdemo.controls.SimpleSeekBar
				android:id="@+id/settings_packets_send_interval"
				android:layout_width="match_parent"
				android:layout_height="15dp"/>
			<FrameLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">
				<com.gcscout.trackerdemo.controls.ScalableTextView
					android:id="@+id/settings_packets_min_send_interval"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="left"
					app:textSizePercent="0.4"
					style="@style/SettingsSeekBarLabel"/>
				<com.gcscout.trackerdemo.controls.ScalableTextView
					android:id="@+id/settings_packets_send_interval_label"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					app:textSizePercent="0.35"
					style="@style/SettingsSeekBarLabel"/>
				<com.gcscout.trackerdemo.controls.ScalableTextView
					android:id="@+id/settings_packets_max_send_interval"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="right"
					app:textSizePercent="0.4"
					style="@style/SettingsSeekBarLabel"/>
			</FrameLayout>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/settings_packets_send_threshold_layout"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:orientation="vertical">
			<com.gcscout.trackerdemo.controls.SimpleSeekBar
				android:id="@+id/settings_packets_send_threshold"
				android:layout_width="match_parent"
				android:layout_height="15dp"/>
			<FrameLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">
				<com.gcscout.trackerdemo.controls.ScalableTextView
					android:id="@+id/settings_packets_min_send_threshold"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="left"
					app:textSizePercent="0.4"
					style="@style/SettingsSeekBarLabel"/>
				<com.gcscout.trackerdemo.controls.ScalableTextView
					android:id="@+id/settings_packets_send_threshold_label"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					app:textSizePercent="0.35"
					style="@style/SettingsSeekBarLabel"/>
				<com.gcscout.trackerdemo.controls.ScalableTextView
					android:id="@+id/settings_packets_max_send_threshold"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					app:textSizePercent="0.4"
					android:layout_gravity="right"
					style="@style/SettingsSeekBarLabel"/>
			</FrameLayout>
		</LinearLayout>
	</LinearLayout>
	<View
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="3"
		android:background="@color/settings_bg"/>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="64"
		android:gravity="center_vertical"
		style="@style/SettingsItem">
		<com.gcscout.trackerdemo.controls.ScalableTextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			app:textSizePercent="0.4"
			android:text="@string/settings_filter_accuracy_threshold_label"
			android:lines="2"
			android:singleLine="false"
			style="@style/SettingsLabel"/>
		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:orientation="vertical">
			<com.gcscout.trackerdemo.controls.SimpleSeekBar
				android:id="@+id/settings_filter_accuracy_threshold"
				android:layout_width="match_parent"
				android:layout_height="15dp"/>
			<FrameLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">
				<com.gcscout.trackerdemo.controls.ScalableTextView
					android:id="@+id/settings_filter_accuracy_min_threshold"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="left"
					app:textSizePercent="0.4"
					style="@style/SettingsSeekBarLabel"/>
				<com.gcscout.trackerdemo.controls.ScalableTextView
					android:id="@+id/settings_filter_accuracy_threshold_label"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					app:textSizePercent="0.35"
					style="@style/SettingsSeekBarLabel"/>
				<com.gcscout.trackerdemo.controls.ScalableTextView
					android:id="@+id/settings_filter_accuracy_max_threshold"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="right"
					app:textSizePercent="0.4"
					style="@style/SettingsSeekBarLabel"/>
			</FrameLayout>
		</LinearLayout>
	</LinearLayout>
	<View
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="3"
		android:background="@color/settings_bg"/>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="64"
		android:gravity="center_vertical"
		style="@style/SettingsItem">
		<com.gcscout.trackerdemo.controls.ScalableTextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			app:textSizePercent="0.4"
			android:text="@string/settings_gps_filter_detalization_label"
			android:lines="2"
			android:singleLine="false"
			style="@style/SettingsLabel"/>
		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:orientation="vertical">
			<com.gcscout.trackerdemo.controls.SimpleSeekBar
				android:id="@+id/settings_gps_filter_detalization"
				android:layout_width="match_parent"
				android:layout_height="15dp"/>
			<FrameLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">
				<com.gcscout.trackerdemo.controls.ScalableTextView
					android:id="@+id/settings_gps_filter_min_detalization"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="left"
					app:textSizePercent="0.4"
					style="@style/SettingsSeekBarLabel"/>
				<com.gcscout.trackerdemo.controls.ScalableTextView
					android:id="@+id/settings_gps_filter_detalization_label"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					app:textSizePercent="0.35"
					style="@style/SettingsSeekBarLabel"/>
				<com.gcscout.trackerdemo.controls.ScalableTextView
					android:id="@+id/settings_gps_filter_max_detalization"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="right"
					app:textSizePercent="0.4"
					style="@style/SettingsSeekBarLabel"/>
			</FrameLayout>
		</LinearLayout>
	</LinearLayout>
	<View
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="3"
		android:background="@color/settings_bg"/>
	<View
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="99"
		android:background="@color/settings_item_bg"/>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="65"
		android:gravity="center"
		android:orientation="vertical"
		android:weightSum="65"
		android:background="@color/settings_bg">
		<com.gcscout.trackerdemo.controls.ScalableTextView
			android:id="@+id/settings_apply_btn"
			android:layout_width="wrap_content"
			android:layout_height="0dp"
			android:layout_weight="42"
			android:gravity="center"
			android:paddingLeft="100dp"
			android:paddingRight="100dp"
			app:textSizePercent="0.6"
			android:text="@string/settings_apply_btn_text"
			android:textColor="@color/settings_bg"
			android:background="@drawable/settings_apply_btn_selector"/>
	</LinearLayout>
</LinearLayout>